objects/Down_Day__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_All_Day__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is All Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Work_Type__r.Name + &apos; Down Day&apos;</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_Color__c</fullName>
        <label>Work Type Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Down Days</relationshipLabel>
        <relationshipName>Down_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Down Day</label>
    <nameField>
        <label>Down Day Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Down Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>